# Sparse2D

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL  README.md  VERSION
lib/: libfftw3.3.dylib  libfftw3.la  libfftw3_omp.3.dylib  libfftw3_omp.la  libfftw3f.3.dylib  libfftw3f.la  libfftw3f_omp.3.dylib  libfftw3f_omp.la  libnfft3.2.dylib  libnfft3.dylib  libnfft3.la  libnfft3_threads.2.dylib  libnfft3_threads.dylib  libnfft3_threads.la
lib/pkgconfig/: fftw3.pc  fftw3f.pc  nfft3.pc
modules/: BuildFFTW3.cmake  BuildNFFT.cmake  fftw.cmd  nfft.cmd  nfft_fftw.cmd
share/info/: fftw3.info  fftw3.info-1  fftw3.info-2
src/: mr_recons.cc
src/libsparse3d/: Atrou3D.cc  Atrou3D.h  MR3D_Obj.cc
src/libtools/: IM_Edge.cc  MatrixOper.cc  MatrixOper.h
tests/: mr_transform_test.cpp
tests/images/: macos_border.fits  macos_border_t16_n4_U2.mr  macos_circle.fits  macos_circle_t30_n4_U2.mr  macos_cross.fits  macos_cross_t2_n4_U2.mr
